--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@
 <body class="" style="background: #000000;">
 
 
+
+    <!-- Pantalla de carga -->
+    <!-- <div id="preloader"
+        style="position:fixed;z-index:99999;top:0;left:0;width:100vw;height:100vh;background:#000;display:flex;align-items:center;justify-content:center;transition:opacity 0.7s cubic-bezier(.4,0,.2,1);opacity:1;">
+        <video id="loadingVideo" width="320" height="180" autoplay muted playsinline
+            style="max-width:90vw;max-height:90vh;">
+            <source src="img/video/loading.mp4" type="video/mp4">
+            Tu navegador no soporta el video.
+        </video>
+    </div> -->
+    <!-- Fin pantalla de carga -->
+
+
     <!-- Navbar -->
     <nav id="mainNavbar" class="navbar navbar-expand-md navbar-light fixed-top bg-transparent shadow-sm transition-bg">
         <div class="container">
@@ -58,7 +71,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav mx-auto mb-2 mb-md-0 justify-content-center w-100">
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center" href="/">Inicio</a>
+                        <a class="nav-link fw-medium text-center active" href="/">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center" href="./about.html">Nosotros</a>
@@ -109,13 +122,6 @@
                     style="max-width: 300px; width: 30%; height: auto;">
                 <h2 class="text-white mt-0 mb-0 text-center display-6">Musicalmente Efectivos</h2>
                 <h2 class="text-white my-2 display-6">Profesionalmente Apasionados</h2>
-                <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
-                    class="btn btn-lg mt-4 px-4 d-flex align-items-center justify-content-center"
-                    style="background-color: #25D366; color: #fff; border: none; gap: 8px;" target="_blank"
-                    rel="noopener">
-                    <i class="fab fa-whatsapp fa-lg"></i>
-                    WhatsApp
-                </a>
             </div>
             <!-- <button id="muteBtn" class="btn btn-secondary position-absolute" style="bottom: 30px; right: 30px; z-index: 3;">
                 <i class="fa fa-volume-mute"></i>
@@ -172,38 +178,38 @@
         <div class="row pb-3 justify-content-center">
             <!-- Card 1 -->
             <div class="col-md-6 col-lg-4 mb-4">
-                <a href="">
-                    <div class="custom-card">
-                        <div class="custom-card-img-wrapper">
-                            <img class="custom-card-img" src="img/service_1.webp" alt="">
-                        </div>
-                        <div class="custom-card-content">
-                            <div class="d-flex justify-content-center align-items-center mb-2">
-                                <h4 class="card-title text-white text-truncate m-0">Trivium Academia</h4>
-                            </div>
-                            <p>Un espacio académico para la enseñanza de música (piano, canto, DJ) enfocado hacia el
-                                perfeccionamiento musical.</p>
-                            <p>Clases teóricas y prácticas impartidas por maestros con experiencia vasta en la música.
-                            </p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <!-- Card 2 -->
-            <div class="col-md-6 col-lg-4 mb-4">
                 <div class="custom-card">
                     <div class="custom-card-img-wrapper">
-                        <img class="custom-card-img" src="img/service_2.webp" alt="">
+                        <img class="custom-card-img" src="img/service_1.webp" alt="">
                     </div>
                     <div class="custom-card-content">
                         <div class="d-flex justify-content-center align-items-center mb-2">
-                            <h4 class="card-title text-white text-truncate m-0">Trivium Producción</h4>
+                            <h4 class="card-title text-white text-truncate m-0">Trivium Academia</h4>
                         </div>
-                        <p>Renta y servicio de producciones musicales para conciertos y eventos sociales.</p>
-                        <p>Montaje de festivales, fiestas, organización de eventos, curaduría de música, servicios
-                            musicales en vivo.</p>
+                        <p>Un espacio académico para la enseñanza de música (piano, canto, DJ) enfocado hacia el
+                            perfeccionamiento musical.</p>
+                        <p>Clases teóricas y prácticas impartidas por maestros con experiencia vasta en la música.
+                        </p>
                     </div>
                 </div>
+            </div>
+            <!-- Card 2 -->
+            <div class="col-md-6 col-lg-4 mb-4">
+                <a href="./service.html">
+                    <div class="custom-card">
+                        <div class="custom-card-img-wrapper">
+                            <img class="custom-card-img" src="img/service_2.webp" alt="">
+                        </div>
+                        <div class="custom-card-content">
+                            <div class="d-flex justify-content-center align-items-center mb-2">
+                                <h4 class="card-title text-white text-truncate m-0">Trivium Producción</h4>
+                            </div>
+                            <p>Renta y servicio de producciones musicales para conciertos y eventos sociales.</p>
+                            <p>Montaje de festivales, fiestas, organización de eventos, curaduría de música, servicios
+                                musicales en vivo.</p>
+                        </div>
+                    </div>
+                </a>
             </div>
             <!-- Card 3 -->
             <div class="col-md-6 col-lg-4 mb-4">
@@ -469,6 +475,39 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js" defer></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const video = document.getElementById('loadingVideo');
+            const preloader = document.getElementById('preloader');
+            const mainContent = document.getElementById('main-content');
+
+            function hidePreloader() {
+                if (preloader) {
+                    preloader.style.opacity = '0';
+                    setTimeout(() => {
+                        preloader.style.display = 'none';
+                        if (mainContent) mainContent.style.display = '';
+                    }, 700); // Debe coincidir con el tiempo de transición
+                }
+            }
+
+            if (video) {
+                video.addEventListener('ended', hidePreloader);
+            }
+
+            setTimeout(() => {
+                if (preloader && preloader.style.display !== 'none') {
+                    hidePreloader();
+                }
+            }, 7000);
+        });
+    </script>
+
+    <div id="main-content" style="display:none;">
+        <!-- TODO el contenido actual de tu página, desde el navbar hasta el footer -->
+        ...
+    </div>
 
 </body>
 
