--- a/service.html
+++ b/service.html
@@ -41,6 +41,7 @@
 
 
 
+
     <!-- Navbar -->
     <nav id="mainNavbar" class="navbar navbar-expand-md navbar-light fixed-top bg-transparent shadow-sm transition-bg">
         <div class="container">
@@ -64,11 +65,11 @@
                         <a class="nav-link text-white fw-medium text-center" href="/about.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-medium text-center" href="/service.html">Servicios</a>
+                        <a class="nav-link text-white fw-medium text-center active" href="/service.html">Servicios</a>
                     </li>
-                    <!-- <li class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center" href="/contact.html">Contacto</a>
-                    </li> -->
+                    </li>
                 </ul>
                 <!-- Navbar social icons (coloca esto dentro de tu navbar, después del menú) -->
                 <div class="d-none d-md-flex align-items-center gap-2">
@@ -134,11 +135,9 @@
         </div>
         <div class="d-flex justify-content-center">
             <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
-            class="btn btn-lg mt-4 px-4 d-flex align-items-center justify-content-center"
-            style="background-color: #25D366; color: #fff; border: none; gap: 8px; width: 50rem;" target="_blank"
-            rel="noopener">
-            <i class="fab fa-whatsapp fa-lg"></i>
-            WhatsApp
+                class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank" rel="noopener">
+                <i class="fab fa-whatsapp fa-lg"></i>
+                WhatsApp
             </a>
         </div>
 
@@ -169,15 +168,15 @@
                             <li>Dj</li>
                             <li>Equipo Técnico</li>
                         </ul>
-
-                        <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
-                            class="btn btn-lg mt-4 px-4 d-flex align-items-center justify-content-center"
-                            style="background-color: #25D366; color: #fff; border: none; gap: 8px;" target="_blank"
-                            rel="noopener">
-                            <i class="fab fa-whatsapp fa-lg"></i>
-                            WhatsApp
-                        </a>
-                        <p class="text-center m-3">Costo x 5 horas: $18,000*</p>
+                        <div class="d-flex justify-content-center">
+                            <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
+                                class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
+                                rel="noopener">
+                                <i class="fab fa-whatsapp fa-lg"></i>
+                                WhatsApp
+                            </a>
+                        </div>
+                        <p class="text-center text-white m-3">Costo x 5 horas: $18,000*</p>
                     </div>
                 </div>
             </div>
@@ -201,14 +200,15 @@
                             <li>Equipo Técnico</li>
                         </ul>
 
-                        <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
-                            class="btn btn-lg mt-4 px-4 d-flex align-items-center justify-content-center"
-                            style="background-color: #25D366; color: #fff; border: none; gap: 8px;" target="_blank"
-                            rel="noopener">
-                            <i class="fab fa-whatsapp fa-lg"></i>
-                            WhatsApp
-                        </a>
-                        <p class="text-center m-3">Costo x 5 horas: $25,000*</p>
+                        <div class="d-flex justify-content-center">
+                            <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
+                                class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
+                                rel="noopener">
+                                <i class="fab fa-whatsapp fa-lg"></i>
+                                WhatsApp
+                            </a>
+                        </div>
+                        <p class="text-center text-white m-3">Costo x 5 horas: $25,000*</p>
                     </div>
                 </div>
             </div>
@@ -232,15 +232,15 @@
                             <li>DJ</li>
                             <li>Equipo técnico</li>
                         </ul>
-
-                        <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
-                            class="btn btn-lg mt-4 px-4 d-flex align-items-center justify-content-center"
-                            style="background-color: #25D366; color: #fff; border: none; gap: 8px;" target="_blank"
-                            rel="noopener">
-                            <i class="fab fa-whatsapp fa-lg"></i>
-                            WhatsApp
-                        </a>
-                        <p class="text-center m-3">Costo x 5 horas: $45,000*</p>
+                        <div class="d-flex justify-content-center">
+                            <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
+                                class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
+                                rel="noopener">
+                                <i class="fab fa-whatsapp fa-lg"></i>
+                                WhatsApp
+                            </a>
+                        </div>
+                        <p class="text-center text-white m-3">Costo x 5 horas: $45,000*</p>
                     </div>
                 </div>
             </div>
@@ -274,14 +274,15 @@
                             <li>1 Proyecto</li>
                             <li>1 Operador</li>
                         </ul>
-                        <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
-                            class="btn btn-lg mt-4 px-4 d-flex align-items-center justify-content-center"
-                            style="background-color: #25D366; color: #fff; border: none; gap: 8px;" target="_blank"
-                            rel="noopener">
-                            <i class="fab fa-whatsapp fa-lg"></i>
-                            WhatsApp
-                        </a>
-                        <p class="text-center m-3">Costo: $6,000</p>
+                        <div class="d-flex justify-content-center">
+                            <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
+                                class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
+                                rel="noopener">
+                                <i class="fab fa-whatsapp fa-lg"></i>
+                                WhatsApp
+                            </a>
+                        </div>
+                        <p class="text-center text-white m-3">Costo: $6,000</p>
                     </div>
                 </div>
             </div>
@@ -303,14 +304,15 @@
                             <li>1 Proyecto</li>
                             <li>1 Operador</li>
                         </ul>
-                        <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
-                            class="btn btn-lg mt-4 px-4 d-flex align-items-center justify-content-center"
-                            style="background-color: #25D366; color: #fff; border: none; gap: 8px;" target="_blank"
-                            rel="noopener">
-                            <i class="fab fa-whatsapp fa-lg"></i>
-                            WhatsApp
-                        </a>
-                        <p class="text-center m-3">Costo: $8,000</p>
+                        <div class="d-flex justify-content-center">
+                            <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
+                                class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
+                                rel="noopener">
+                                <i class="fab fa-whatsapp fa-lg"></i>
+                                WhatsApp
+                            </a>
+                        </div>
+                        <p class="text-center text-white m-3">Costo: $8,000</p>
                     </div>
                 </div>
             </div>
@@ -332,14 +334,15 @@
                             <li>1 Proyecto</li>
                             <li>1 Operador</li>
                         </ul>
-                        <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
-                            class="btn btn-lg mt-4 px-4 d-flex align-items-center justify-content-center"
-                            style="background-color: #25D366; color: #fff; border: none; gap: 8px;" target="_blank"
-                            rel="noopener">
-                            <i class="fab fa-whatsapp fa-lg"></i>
-                            WhatsApp
-                        </a>
-                        <p class="text-center m-3">Costo: $10,000</p>
+                        <div class="d-flex justify-content-center">
+                            <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
+                                class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
+                                rel="noopener">
+                                <i class="fab fa-whatsapp fa-lg"></i>
+                                WhatsApp
+                            </a>
+                        </div>
+                        <p class="text-center text-white m-3">Costo: $10,000</p>
                     </div>
                 </div>
             </div>
@@ -361,14 +364,15 @@
                             <li>1 Proyecto</li>
                             <li>1 Operador</li>
                         </ul>
-                        <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
-                            class="btn btn-lg mt-4 px-4 d-flex align-items-center justify-content-center"
-                            style="background-color: #25D366; color: #fff; border: none; gap: 8px;" target="_blank"
-                            rel="noopener">
-                            <i class="fab fa-whatsapp fa-lg"></i>
-                            WhatsApp
-                        </a>
-                        <p class="text-center m-3">Costo: $15,000</p>
+                        <div class="d-flex justify-content-center">
+                            <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
+                                class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
+                                rel="noopener">
+                                <i class="fab fa-whatsapp fa-lg"></i>
+                                WhatsApp
+                            </a>
+                        </div>
+                        <p class="text-center text-white m-3">Costo: $15,000</p>
                     </div>
                 </div>
             </div>
@@ -390,14 +394,15 @@
                             <li>8 Par led</li>
                             <li>2 Operadores</li>
                         </ul>
-                        <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
-                            class="btn btn-lg mt-4 px-4 d-flex align-items-center justify-content-center"
-                            style="background-color: #25D366; color: #fff; border: none; gap: 8px;" target="_blank"
-                            rel="noopener">
-                            <i class="fab fa-whatsapp fa-lg"></i>
-                            WhatsApp
-                        </a>
-                        <p class="text-center m-3">Costo: $54,000</p>
+                        <div class="d-flex justify-content-center">
+                            <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20Trivium%20Records"
+                                class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
+                                rel="noopener">
+                                <i class="fab fa-whatsapp fa-lg"></i>
+                                WhatsApp
+                            </a>
+                        </div>
+                        <p class="text-center text-white m-3">Costo: $54,000</p>
                     </div>
                 </div>
             </div>
