--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     
 
     <!-- Pantalla de carga -->
-    <!-- <div id="preloader"
+    <div id="preloader"
         style="position:fixed;z-index:99999;top:0;left:0;width:100vw;height:100vh;background:#000;display:flex;align-items:center;justify-content:center;transition:opacity 0.7s cubic-bezier(.4,0,.2,1);opacity:1;">
         <div style="display:flex;align-items:center;justify-content:center;width:100vw;height:100vh;">
             <video id="loadingVideo" width="320" height="180" autoplay muted playsinline
@@ -53,7 +53,7 @@
                 Tu navegador no soporta el video.
             </video>
         </div>
-    </div> -->
+    </div>
     <!-- Fin pantalla de carga -->
 
 
@@ -246,39 +246,39 @@
     <!-- Subscribe End -->
 
     <!-- Facts Start -->
-    <div class="container-fluid my-5 py-5 text-center" style="background: #ff00ea2d;">
+    <div class="container-fluid my-5 py-5 text-center" style="background: #f2af13;">
         <div class="row pt-5">
             <div class="col-lg-3 col-sm-6 mb-5">
                 <!-- <h5 class="fa fa-user-shield mb-4 d-inline-flex align-items-center justify-content-center border rounded-circle text-white"
                     style="width: 50px; height: 50px;"></h5> -->
-                <h4 class="display-4 text-white mb-3">
-                  <span class="plus">+</span><span data-toggle="counter-up">5</span>
+                <h4 class="display-4 text-dark mb-3">
+                  <span class="plus">+</span><span data-toggle="counter-up">7</span>
                 </h4>
-                <h3 class="text-white mb-3">Años de experiencia</h3>
+                <h3 class="text-dark mb-3">Años de experiencia</h3>
             </div>
             <div class="col-lg-3 col-sm-6 mb-5">
                 <!-- <h5 class="fa fa-users mb-4 d-inline-flex align-items-center justify-content-center border rounded-circle text-white"
                     style="width: 50px; height: 50px;"></h5> -->
-                <h4 class="display-4 text-white mb-3">
+                <h4 class="display-4 text-dark mb-3">
                   <span class="plus">+</span><span data-toggle="counter-up">100</span>
                 </h4>
-                <h3 class="text-white mb-3">Eventos</h3>
+                <h3 class="text-dark mb-3">Eventos</h3>
             </div>
             <div class="col-lg-3 col-sm-6 mb-5">
                 <!-- <h5 class="fa fa-shield-alt mb-4 d-inline-flex align-items-center justify-content-center border rounded-circle text-white"
                     style="width: 50px; height: 50px;"></h5> -->
-                <h4 class="display-4 text-white mb-3">
+                <h4 class="display-4 text-dark mb-3">
                   <span class="plus">+</span><span data-toggle="counter-up">10</span>
                 </h4>
-                <h3 class="text-white mb-3">Años de profesorado</h3>
+                <h3 class="text-dark mb-3">Años de profesorado</h3>
             </div>
             <div class="col-lg-3 col-sm-6 mb-5">
                 <!-- <h5 class="fa fa-award mb-4 d-inline-flex align-items-center justify-content-center border rounded-circle text-white"
                     style="width: 50px; height: 50px;"></h5> -->
-                <h4 class="display-4 text-white mb-3">
+                <h4 class="display-4 text-dark mb-3">
                   <span class="plus">+</span><span data-toggle="counter-up">50</span>
                 </h4>
-                <h3 class="text-white mb-3">Colaboraciones con artistas</h3>
+                <h3 class="text-dark mb-3">Colaboraciones con artistas</h3>
             </div>
         </div>
     </div>
@@ -286,117 +286,94 @@
 
 
     <!-- Testimonial Start -->
-    <div class="container-fluid my-5 p-0 py-5">
+    <div class="container-fluid my-5 p-0 py-3">
         <div class="container p-0 py-5">
             <div class="d-flex flex-column text-center mb-5">
                 <h3 class="text-white mb-3 display-6">Testimonial</h3>
             </div>
             <div class="owl-carousel testimonial-carousel">
                 <!-- Testimonio 1 -->
-                <div class="testimonial-item px-3">
-                    <div class="testimonial-text position-relative border bg-light mb-4 py-3 px-4">
-                        "Hiciste nuestra boda inolvidable! El DJ nos traía bailando toda la noche, Muchas gracias por
-                        todo!"
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <div class="pl-4">
-                            <h4 class="" style="color: #f2af13;">Dania y Roberto</h4>
-                            <p class="m-0">Servicio Trivium Produccion</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Testimonio 2 -->
-                <div class="testimonial-item px-3">
-                    <div class="testimonial-text position-relative border bg-light mb-4 py-3 px-4">
-                        "Apenas ando reviviendo, ame todo, la musica, la illuminacion, el sonido, mis amigos siguen
-                        preguntando por ustedes!"
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <div class="pl-4">
-                            <h4 class="" style="color: #f2af13;">Fernando y Geraldine</h4>
-                            <p class="m-0">Servicio Trivium Produccion</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Testimonio 3 -->
-                <div class="testimonial-item px-3">
-                    <div class="testimonial-text position-relative border bg-light mb-4 py-3 px-4">
-                        "Agradecidos estamos con ustedes, se dejaron muy buenos recuerdos y fuiste parte clave de ello!
-                        Quedo todo espectacular."
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <div class="pl-4">
-                            <h4 class="" style="color: #f2af13;">Pau y Jorge</h4>
-                            <p class="m-0">Servicio Trivium Produccion</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Testimonio 4 -->
-                <div class="testimonial-item px-3">
-                    <div class="testimonial-text position-relative border bg-light mb-4 py-3 px-4">
-                        "Es un gusto coincidir con un maestro que de verdad ama lo que hace como usted, gracias por las
-                        enseñanzas, espero cantar con usted pronto en escenario!"
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <div class="pl-4">
-                            <h4 class="" style="color: #f2af13;">Oscar, Tenor</h4>
-                            <p class="m-0">Servicio Trivium Academia</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Testimonio 5 -->
-                <div class="testimonial-item px-3">
-                    <div class="testimonial-text position-relative border bg-light mb-4 py-3 px-4">
-                        "En el poco tiempo que llevo de clase, he aprendido mucho de ustedes, es lindo encontrar
-                        personas que les apasiona el canto y la musica."
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <div class="pl-4">
-                            <h4 class="" style="color: #f2af13;">Olivia, Alto</h4>
-                            <p class="m-0">Servicio Trivium Academia</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Testimonio 6 -->
-                <div class="testimonial-item px-3">
-                    <div class="testimonial-text position-relative border bg-light mb-4 py-3 px-4">
-                        "Certifico que el maestro profesionalmente sabe muy bien lo que hace, hace de los ensayos
-                        divertidos y estoy emocionado por seguir aprendiendo con el"
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <div class="pl-4">
-                            <h4 class="" style="color: #f2af13;">Julio, Bajo</h4>
-                            <p class="m-0">Servicio Trivium Academia</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Testimonio Rock Star -->
-                <div class="rock-testimonial">
-                    <div class="rock-testimonial-header">
-                        <span class="rock-icon">&#9889;</span> <!-- Rayo estilo rock -->
-                        <span class="rock-name">Juan Pérez</span>
-                        <span class="rock-role">Vocalista, BlackStone</span>
-                    </div>
+                <div class="rock-testimonial mx-2">
                     <div class="rock-testimonial-body">
                         <p>
-                          “¡La experiencia con Trivium Records fue brutal! El sonido, la vibra y la profesionalidad nos hicieron sentir como verdaderas estrellas del rock.”
+                          "Hiciste nuestra boda inolvidable! El DJ nos traía bailando toda la noche, Muchas gracias por todo!"
                         </p>
                     </div>
-                </div>
-                <!-- Testimonio Rock Star -->
-                <div class="rock-testimonial">
-                    <div class="rock-testimonial-header">
-                        <span class="rock-icon">&#9889;</span> <!-- Rayo estilo rock -->
-                        <span class="rock-name">Juan Pérez</span>
-                        <span class="rock-role">Vocalista, BlackStone</span>
-                    </div>
-                    <div class="rock-testimonial-body">
-                        <p>
-                          “¡La experiencia con Trivium Records fue brutal! El sonido, la vibra y la profesionalidad nos hicieron sentir como verdaderas estrellas del rock.”
-                        </p>
+                    <div class="rock-testimonial-header my-3">
+                        <!-- <span class="rock-icon">&#9889;</span> Rayo estilo rock -->
+                        <span class="rock-name">Dania y Roberto</span>
+                        <span class="rock-role">Servicio Trivium Produccion</span>
                     </div>
                 </div>
 
+                <!-- Testimonio 2 -->
+                <div class="rock-testimonial mx-2">
+                    <div class="rock-testimonial-body">
+                        <p>
+                          "Apenas ando reviviendo, ame todo, la musica, la illuminacion, el sonido, mis amigos siguen preguntando por ustedes!"
+                        </p>
+                    </div>
+                    <div class="rock-testimonial-header my-3">
+                        <!-- <span class="rock-icon">&#9889;</span> Rayo estilo rock -->
+                        <span class="rock-name">Fernando y Geraldine</span>
+                        <span class="rock-role">Servicio Trivium Produccion</span>
+                    </div>
+                </div>
+                <!-- Testimonio 3 -->
+                <div class="rock-testimonial mx-2">
+                    <div class="rock-testimonial-body">
+                        <p>
+                          "Agradecidos estamos con ustedes, se dejaron muy buenos recuerdos y fuiste parte clave de ello! Quedo todo espectacular."
+                        </p>
+                    </div>
+                    <div class="rock-testimonial-header my-3">
+                        <!-- <span class="rock-icon">&#9889;</span> Rayo estilo rock -->
+                        <span class="rock-name">Pau y Jorge</span>
+                        <span class="rock-role">Servicio Trivium Produccion</span>
+                    </div>
+                </div>
+                <!-- Testimonio 4 -->
+                <div class="rock-testimonial mx-2">
+                    <div class="rock-testimonial-body">
+                        <p>
+                          "Es un gusto coincidir con un maestro que de verdad ama lo que hace como usted, gracias por las
+                        enseñanzas, espero cantar con usted pronto en escenario!"
+                        </p>
+                    </div>
+                    <div class="rock-testimonial-header my-3">
+                        <!-- <span class="rock-icon">&#9889;</span> Rayo estilo rock -->
+                        <span class="rock-name">Oscar, Tenor</span>
+                        <span class="rock-role">Servicio Trivium Academia</span>
+                    </div>
+                </div>
+                <!-- Testimonio 5 -->
+                <div class="rock-testimonial mx-2">
+                    <div class="rock-testimonial-body">
+                        <p>
+                          "En el poco tiempo que llevo de clase, he aprendido mucho de ustedes, es lindo encontrar
+                        personas que les apasiona el canto y la musica."
+                        </p>
+                    </div>
+                    <div class="rock-testimonial-header my-3">
+                        <!-- <span class="rock-icon">&#9889;</span> Rayo estilo rock -->
+                        <span class="rock-name">Olivia, Alto</span>
+                        <span class="rock-role">Servicio Trivium Academia</span>
+                    </div>
+                </div>
+                <!-- Testimonio 6 -->
+                <div class="rock-testimonial mx-2">
+                    <div class="rock-testimonial-body">
+                        <p>
+                          "Certifico que el maestro profesionalmente sabe muy bien lo que hace, hace de los ensayos
+                        divertidos y estoy emocionado por seguir aprendiendo con el"
+                        </p>
+                    </div>
+                    <div class="rock-testimonial-header my-3">
+                        <!-- <span class="rock-icon">&#9889;</span> Rayo estilo rock -->
+                        <span class="rock-name">Julio, Bajo</span>
+                        <span class="rock-role">Servicio Trivium Academia</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -547,6 +524,8 @@
         <!-- TODO el contenido actual de tu página, desde el navbar hasta el footer -->
         ...
     </div>
+
+    
 
 </body>
 
